# Shard

./: AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md
.github/: copilot-instructions.md
doc/: best-practices.md  requirements.md
fonts/: style.css
src/: color.rs  config.rs  db.rs  icons.rs  main.rs  message.rs  theme.rs  update.rs
src/snippet/: code.rs  color.rs  mod.rs  text.rs
src/view/: code_card.rs  code_editor.rs  color_card.rs  color_picker.rs  mod.rs  settings.rs  text_card.rs  text_editor.rs
src/widgets/: alpha_bar.rs  cl_box.rs  color_swatch.rs  hue_bar.rs  mod.rs  sl_box.rs
