[package]
name = "shard"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["tokio", "advanced", "canvas"] }
regex = "1.10"
arboard = "3.4"
tokio = { version = "1.36", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5.0"
