[package]
name = "shard"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = [
  "tokio",
  "advanced",
  "canvas",
  "highlighter",
] }
regex = "1.12"
arboard = "3.6"
tokio = { version = "1.48", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
nanoid = "0.4.0"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "s"
